# ml-ecmwf

./: .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml
code/: Dockerfile  README.md  cdsapirc.example  cdsapirc.template  example.py  jupyter_notebook_config.py  pyproject.toml  reedis.py
code/datarequests/: defaults.py  era5.py  tasks.py  variables.py
code/notebooks/: Download.ipynb
code/notebooks/datarequests/: variables.py
env/: .cdsapirc.env.example  .jupyter.env.example  .rq-dashboard.env.example  rq.env.example
