[tool.poetry]
name = "datarequests"
version = "0.1.0"
description = ""
authors = ["Uğur Çayoğlu <cayoglu@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
cdsapi = "^0.3.0"
xarray = "^0.16.0"
scipy = "^1.5.2"
matplotlib = "^3.3.0"
cartopy = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
